--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body {
   margin: 0;
 }
 
+*::selection {
+  background-color: plum;
+}
+
 /**************************************************************/
 /* Specific Stylings */
 
@@ -32,6 +36,10 @@ header {
   padding: 48px 16px;
   text-align: center;
   background-color: #eee;
+}
+
+.profession::after {
+  content: "🕺";
 }
 
 .nav-link a {
